# Pgaeindex-Light

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml  server.py
docs/: PRD.md  plan.md
docs/fast-mcp-docs/: index.txt
shared/: config.py  pdf_utils.py
tools/: detail.py  indexing.py
